--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ nav {
   padding-top: 15px; */
 }
 
-.nav-links:link {
+/* .nav-links:link {
   color: gray;
   text-decoration: none;
 }
@@ -38,9 +38,20 @@ nav {
 .nav-links:active {
   color: darkblue;
   text-decoration: underline;
-}
+} */
 
 /* Home */
+
+.inactive {
+  text-decoration: none;
+  color: black;
+}
+
+.active {
+  text-decoration: none;
+  color: orangered;
+  font-weight: 500;
+}
 
 .home {
 }
